# catan-sim

./: .gitignore  README.md  pyproject.toml
ai/: __init__.py  agent.py  features.py  network.py  strategies.py  trainer.py
catan/: __init__.py  board.py  constants.py  game.py  player.py  replay.py
scripts/: analyze.py  play_cli.py  serve.py  train.py
server/: app.py
tests/: test_ai.py  test_game.py
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
web/src/: App.tsx  BoardView.tsx  ReplayViewer.tsx  SpectatorView.tsx  TrainingDashboard.tsx  index.css  types.ts  useGameSocket.ts
